--- a/frontend/src/components/Styles/MoviesDetails.css
+++ b/frontend/src/components/Styles/MoviesDetails.css
@@ -113,7 +113,7 @@ h1{
         width: 100vw;
     }
     .MovieImage1{
-        padding:30px
+        padding:30px;
         height: auto;
         width: 100vw;
     }
