--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
   padding-left: 15vw;
   padding-right: 15vw;
   background-color:#111111 ;
+  font-family:Arial, Helvetica, sans-serif;
 }
 .user-page {
   background-color: #191919;
@@ -86,13 +87,13 @@ body {
 
 /* Secondary Navigation Buttons */
 .nav-buttons {
-  margin-top: -1vh;
+  
   display: flex;
   gap: 10px;
   padding: 10px;
   border-radius: 5px;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: -1vh;
 }
 
 .nav-button1 {
@@ -281,7 +282,7 @@ padding-right: 0%;
     padding: 10px;
     border-radius: 5px;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: -16px;
   }
 
   
